--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "artmeth",
+  "name": "torakatv-server",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -7,12 +7,19 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
+    "cloudinary": "^1.32.0",
+    "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "mongoose": "^6.6.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
